// Copyright (c) The Libra Core Contributors
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package consensus;

import "validator_change.proto";

message ConsensusMsg { bytes message = 1; }
